<resources>
    <string name="app_name">FixIt</string>
    <string name="title_activity_welcome_slide_fragment">WelcomeSlideFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="emailText">Email</string>
    <string name="register">Register</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="continuetext">Continue</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hidepass">hidePass</string>
    <string name="login_with_google">Login with google</string>
    <string name="google_logo">google_logo</string>
</resources>