<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#16161A"
    tools:layout_editor_absoluteX="7dp"
    tools:layout_editor_absoluteY="36dp">

    <EditText
        android:id="@+id/emailReg"
        android:layout_width="361dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_bar_background"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:padding="8dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailtext"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/emailtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/emailText"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/passBar"
        android:layout_width="363dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_bar_background"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/loginTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/register"
        android:textColor="#7F5AF0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/don_t_have_account"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/loginTextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/rounded_button_next"
        android:fontFamily="@font/inter_bold"
        android:text="@string/continuetext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passBar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/password"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailReg" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="152dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/passhide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/hidepass"
        app:layout_constraintEnd_toEndOf="@+id/passBar"
        app:layout_constraintTop_toTopOf="@+id/passBar"
        app:srcCompat="@drawable/sign_up_group_7335" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/regButton"
        app:layout_constraintStart_toStartOf="@+id/regButton"
        app:layout_constraintTop_toBottomOf="@+id/regButton">

        <Button
            android:id="@+id/googleLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_button_signup"
            android:fontFamily="@font/inter_bold"
            android:text="@string/login_with_google"
            android:textColor="#000000"
            app:backgroundTint="@null" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:elevation="10dp"
            app:srcCompat="@drawable/flat_color_icons_google"
            android:contentDescription="@string/google_logo" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>